Implementirana HTTP Basic Auth i ažurirana Swagger API dokumentacija
